--- a/views/3_HTML5_MediaControl.html
+++ b/views/3_HTML5_MediaControl.html
@@ -1,6 +1,9 @@
 <html>
 <head></head>
 <body>
-    
+    <video controls>
+        <source src="../src/small-video.mp4" type="video/mp4" loop poster="../src/poster.jpg" height="800" width="600">/>
+        Your browser does not support HTML5 video.
+    </video>
 </body>
 </html>
